Mostrar Listas front

--- a/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using DojoApplicationApi.Areas.HelpPage.ModelDescriptions
+@using DigitalWareApi.Areas.HelpPage.ModelDescriptions
 @model CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
