--- a/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using DojoApplicationApi.Areas.HelpPage
+@using DigitalWareApi.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
