--- a/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using DojoApplicationApi.Areas.HelpPage.Models
+@using DigitalWareApi.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
