--- a/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using DojoApplicationApi.Areas.HelpPage.ModelDescriptions
+@using DigitalWareApi.Areas.HelpPage.ModelDescriptions
 @model EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
