--- a/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
+++ b/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
@@ -1,4 +1,4 @@
-@using DojoApplicationApi.Areas.HelpPage.ModelDescriptions
+@using DigitalWareApi.Areas.HelpPage.ModelDescriptions
 @model Type
 @{
     ModelDescription modelDescription = ViewBag.modelDescription;
