--- a/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using DojoApplicationApi.Areas.HelpPage.Models
+@using DigitalWareApi.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
