--- a/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/DigitalWareApi/DigitalWareApi/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using DojoApplicationApi.Areas.HelpPage.ModelDescriptions
+@using DigitalWareApi.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
