--- a/DigitalWareWeb/src/app/pages/cliente/cliente.component.html
+++ b/DigitalWareWeb/src/app/pages/cliente/cliente.component.html
@@ -8,7 +8,7 @@
       <dxi-column dataField="Nombre"></dxi-column>
       <dxi-column dataField="Edad"></dxi-column>
       <dxi-column caption="Acción" type="buttons" [width]="100">
-        <dxi-button hint="Clone" icon="repeat" [onClick]=""></dxi-button>
+        <dxi-button hint="Clone" icon="repeat" [onClick]="abrirCliente"></dxi-button>
       </dxi-column>
       <dxo-search-panel [visible]="true"></dxo-search-panel>
     </dx-data-grid>
