--- a/DigitalWareWeb/src/app/pages/producto/producto.component.html
+++ b/DigitalWareWeb/src/app/pages/producto/producto.component.html
@@ -9,7 +9,7 @@
       <dxi-column dataField="FechaActualizacion" dataType="date"></dxi-column>
       <dxi-column dataField="Cantidad"></dxi-column>
       <dxi-column caption="Acción" type="buttons" [width]="100">
-        <dxi-button hint="Clone" icon="repeat" [onClick]=""></dxi-button>
+        <dxi-button hint="Clone" icon="repeat" [onClick]="abrirProducto"></dxi-button>
       </dxi-column>
       <dxo-search-panel [visible]="true"></dxo-search-panel>
     </dx-data-grid>
