--- a/DigitalWareWeb/src/app/pages/cliente/cliente.component.html
+++ b/DigitalWareWeb/src/app/pages/cliente/cliente.component.html
@@ -1,4 +1,4 @@
-<h2 class="content-block">Productos</h2>
+<h2 class="content-block">Clientes</h2>
 <div class="content-block">
   <div class="dx-card responsive-paddings">
     <dx-data-grid [dataSource]="this.clientes" keyExpr="Id" [allowColumnReordering]="true" [columnAutoWidth]="true" [focusedRowEnabled]="true">
